2004-06-29  Martin Baulig  <martin@ximian.com>
	* arch/Makefile.am: Don't install libmonodebuggerbfdglue.la, link
	it into libmonodebuggerserver.la instead.

	* wrapper/Mono.Debugger.dll.config.in: Provide a .config file for
	Mono.Debugger.dll and map "monodebuggerserver" to the full path
	name of the installed library.

svn path=/trunk/debugger/; revision=30509

--- a/backends/server/Makefile.am
+++ b/backends/server/Makefile.am
@@ -52,7 +52,11 @@ libmonodebuggerserver_la_SOURCES = \
 debugger_remote_server_LDADD = @SERVER_DEPENDENCIES_LIBS@ libmonodebuggerserver.la
 debugger_remote_server_LDFLAGS = -static
 
-libmonodebuggerserver_la_LIBADD = @SERVER_DEPENDENCIES_LIBS@
-libmonodebuggerserver_la_LDFLAGS = -no-undefined -module -export-dynamic -shared
+libmonodebuggerserver_la_LIBADD = \
+	@SERVER_DEPENDENCIES_LIBS@ \
+	../../arch/libmonodebuggerbfdglue.la
+libmonodebuggerserver_la_LDFLAGS = \
+	 -no-undefined -module -export-dynamic -shared \
+	 -version-info @LT_VERSION_INFO@
 
 CLEANFILES = lib*.a lib*.dll
