2004-06-29  Martin Baulig  <martin@ximian.com>
	* wrapper/Makefile.am: Don't install Mono.Debugger.dll in
	$(libdir), it only goes into the GAC.

svn path=/trunk/debugger/; revision=30533

--- a/wrapper/Makefile.am
+++ b/wrapper/Makefile.am
@@ -20,9 +20,7 @@ bin_SCRIPTS = mdb.exe mdb
 
 MCS_FLAGS = -g
 
-assdir = $(libdir)
-
-ass_SCRIPTS = Mono.Debugger.dll
+noinst_SCRIPTS = Mono.Debugger.dll
 
 MDB_SRCLIST = \
 	@top_srcdir@/frontends/command-line/DebuggerTextWriter.cs	\
