2004-06-30  Martin Baulig  <martin@ximian.com>
	* classes/ObjectCache.cs: Don't make the `objects' ArrayList
	synchronized, protect it with a mutex instead.  This seems to fix
	the deadlock.

	* classes/Threading.cs (DebuggerMutex): Use GMutex instead of Mono
	mutexes.

	* backends/server/breakpoints.h (BreakpointManager): Removed the
	`lock_func' and `unlock_func'.
	(mono_debugger_breakpoint_manager_new): Don't take the function
	pointers as arguments anymore.
	(mono_debugger_breakpoint_manager_lock): Don't take any arguments,
	this is now global.
	(mono_debugger_breakpoint_manager_unlock): Likewise.

	* backends/server/breakpoints.c: Use a GStaticRecMutex.

	* backends/server/mutex.[ch]: New files.

svn path=/trunk/debugger/; revision=30582

--- a/backends/server/Makefile.am
+++ b/backends/server/Makefile.am
@@ -47,7 +47,9 @@ libmonodebuggerserver_la_SOURCES = \
 	$(martin_hack_srclist)	\
 	$(server_sources)	\
 	breakpoints.c		\
-	breakpoints.h
+	breakpoints.h		\
+	mutex.c			\
+	mutex.h
 
 debugger_remote_server_LDADD = @SERVER_DEPENDENCIES_LIBS@ libmonodebuggerserver.la
 debugger_remote_server_LDFLAGS = -static
