2004-07-02  Martin Baulig  <martin@ximian.com>
	* backends/server/mutex.c (DebuggerEvent): New typedef.
	(mono_debugger_event_new): New function.
	(mono_debugger_event_wait): New function.
	(mono_debugger_event_trywait): New function.
	(mono_debugger_event_signal): New function.

	* classes/Threading.cs (DebuggerAutoResetEvent): Use the new
	unmanged event functions from mutex.c.

svn path=/trunk/debugger/; revision=30646

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -6,7 +6,7 @@ MCS_FLAGS=-g
 
 noinst_SCRIPTS = \
 	TestManagedTypes.exe TestAssembly.exe TestNamespace.exe TestModule.dll \
-	TestInvocation.exe TestInheritance.exe Simple.exe
+	MultiThread.exe TestInvocation.exe TestInheritance.exe Simple.exe
 
 noinst_PROGRAMS = testnativetypes module libfoo.so
 
