--- a/configure.in
+++ b/configure.in
@@ -263,29 +263,39 @@ if test x$server_only != xyes ; then
    dnl
    dnl See if readline needs -ltermcap
    dnl
-   AC_MSG_CHECKING([if using the readline library is requested])
-   AC_ARG_ENABLE(readline, [  --disable-readline       don't use GNU readline], use_readline=$enableval, use_readline=yes)
-   AC_MSG_RESULT($use_readline)
-   if test "x$use_readline" = "xyes"; then
-      AC_DEFINE(USE_READLINE,1,[Whether to use GNU readline])
+   AC_MSG_CHECKING([if using the libedit library is requested])
+   AC_ARG_ENABLE(editline, [  --disable-libedit       don't use libedit], use_libedit=$enableval, use_libedit=yes)
+   AC_MSG_RESULT($use_libedit)
+   if test "x$use_libedit" = "xyes"; then
+      AC_DEFINE(USE_LIBEDIT,1,[Whether to use libedit])
 
       old_LIBS=$LIBS
-      LIBS="-lreadline"
+      LIBS="-ledit"
 
-      AC_TRY_LINK(,,[READLINE_DEPLIBS="-lreadline"],[
-		LIBS="$LIBS -ltermcap"
+      AC_TRY_LINK(,,[LIBEDIT_DEPLIBS=$LIBS],[
+		LIBS="-ledit -ltermcap"
 		AC_TRY_LINK(,,[
-			READLINE_DEPLIBS="-lreadline -ltermcap"
+			LIBEDIT_DEPLIBS=$LIBS
 		],[
-			AC_MSG_ERROR([Cannot figure out how to link with the readline library; see config.log for more information])
+			LIBS="-ledit -lcurses"
+			AC_TRY_LINK(,,[
+				LIBEDIT_DEPLIBS=$LIBS
+			],[
+				LIBS="-ledit -lncurses"
+				AC_TRY_LINK(,,[
+					LIBEDIT_DEPLIBS=$LIBS
+				],[
+					AC_MSG_ERROR([Cannot figure out how to link with the libedit library; see config.log for more information])
+				])
+			])
 		])
       ])
 
       LIBS=$old_LIBS
    else
-      READLINE_DEPLIBS=	
+      LIBEDIT_DEPLIBS=	
    fi
-   AC_SUBST(READLINE_DEPLIBS)
+   AC_SUBST(LIBEDIT_DEPLIBS)
 fi
 
 dnl
