2004-11-12  Chris Toshok  <toshok@ximian.com>
        * jay/: Add our own copy of jay from the mcs source.
        
        * configure.in (AC_OUTPUT): add jay/Makefile.

        * Makefile.am (SUBDIRS): add jay/

        * frontends/command-line/Makefile.am (JAY): use our jay, not
        mcs's.


svn path=/trunk/debugger/; revision=36059

--- a/configure.in
+++ b/configure.in
@@ -319,6 +319,7 @@ AC_CHECK_FUNCS(fcntl getpagesize setitimer sysconf fdopen getuid getgid)
 AC_OUTPUT([
 Makefile
 mono-debugger.pc
+jay/Makefile
 interfaces/Makefile
 classes/Makefile
 glue/Makefile
