2004-12-06  Chris Toshok  <toshok@ximian.com>
        * backends/server/Makefile.am
        * (libmonodebuggerserver_la_LDFLAGS):
        remove -module and -version-info, as it's unnecessary (for the
        moment, at the very least) and it breaks the ppc build.

        * glue/Makefile.am (libmonodebuggerreadline_la_LDFLAGS): remove
        -module, as it's unnecessary and breaks the ppc build.

        * autogen.sh: use glibtool if it's there.

        * acinclude.m4: add the LINUX_NPTL_CHECK here.

        * configure.in: and make use of it here, only if the platform is
        i386linux and server_only = no.


svn path=/trunk/debugger/; revision=37268

--- a/backends/server/Makefile.am
+++ b/backends/server/Makefile.am
@@ -58,7 +58,6 @@ libmonodebuggerserver_la_LIBADD = \
 	@SERVER_DEPENDENCIES_LIBS@ \
 	../../arch/libmonodebuggerbfdglue.la
 libmonodebuggerserver_la_LDFLAGS = \
-	 -no-undefined -module -export-dynamic -shared \
-	 -version-info @LT_VERSION_INFO@
+	 -no-undefined -export-dynamic -shared
 
 CLEANFILES = lib*.a lib*.dll
