--- a/glue/Makefile.am
+++ b/glue/Makefile.am
@@ -5,7 +5,7 @@ libmonodebuggerreadline_la_SOURCES = \
 	mono-debugger-readline.h
 
 libmonodebuggerreadline_la_LIBADD = @BASE_DEPENDENCIES_LIBS@ @READLINE_DEPLIBS@
-libmonodebuggerreadline_la_LDFLAGS = -no-undefined -module -export-dynamic -shared
+libmonodebuggerreadline_la_LDFLAGS = -no-undefined -export-dynamic -shared
 
 INCLUDES = @BASE_DEPENDENCIES_CFLAGS@ @glue_cflags@
 
