2004-12-08  Martin Baulig  <martin@ximian.com>
	* configure.in: Add -D_GNU_SOURCE to `glue_cflags' and
	`server_cflags' on Linux.

	* wrapper/Makefile.am (WRAPPER_CFLAGS): Include `@glue_cflags@'.

	* wrapper/wrapper.c (debugger_event_handler): Reflect latest
	metadata changes; take two guint64 arguments.

	* backends/server/i386-arch.c (i386_arch_child_stopped): The
	notification function now takes two guint64 arguments.


svn path=/trunk/debugger/; revision=37434

--- a/configure.in
+++ b/configure.in
@@ -34,8 +34,8 @@ AC_SUBST(WARN_CFLAGS)
 AC_MSG_CHECKING([host platform characteristics])
 case "$host" in
 	*-*-linux*)
-		glue_cflags=
-		server_cflags=
+		glue_cflags=-D_GNU_SOURCE
+		server_cflags=-D_GNU_SOURCE
 		server_only=no
 		bfd_target=i386linux
 		platform=i386linux
