2004-12-08  Chris Toshok  <toshok@ximian.com>
        * configure.in (AC_OUTPUT): remove the frontends/* subdirs.  we
        just build frontend/ now.

        * wrapper/Makefile.am (MDB_SRCLIST): track change in location of
        all frontend files.

        * frontends/*: move all files into frontend/ directory, and
        collapse the three (yes, three) namespaces down into 1.


svn path=/trunk/debugger/; revision=37451

--- a/configure.in
+++ b/configure.in
@@ -225,9 +225,7 @@ backends/server/Makefile
 backends/ptrace/Makefile
 backends/mono-csharp/Makefile
 backends/native/Makefile
-frontends/Makefile
-frontends/scripting/Makefile
-frontends/command-line/Makefile
+frontend/Makefile
 arch/Makefile
 arch/libiberty/Makefile
 arch/opcodes/Makefile
