--- a/configure.in
+++ b/configure.in
@@ -137,17 +137,19 @@ fi
 
 ## Versions of dependencies
 GLIB_REQUIRED_VERSION=2.0.0
+MONO_REQUIRED_VERSION=0.96
+
+
 PKG_CHECK_MODULES(BASE_DEPENDENCIES, glib-2.0 >= $GLIB_REQUIRED_VERSION)
 AC_SUBST(BASE_DEPENDENCIES_CFLAGS)
 AC_SUBST(BASE_DEPENDENCIES_LIBS)
 
 ## Versions of dependencies
-PKG_CHECK_MODULES(SERVER_DEPENDENCIES, glib-2.0 >= $GLIB_REQUIRED_VERSION $martin_deps)
+PKG_CHECK_MODULES(SERVER_DEPENDENCIES, mono >= $MONO_REQUIRED_VERSION glib-2.0 >= $GLIB_REQUIRED_VERSION $martin_deps)
 AC_SUBST(SERVER_DEPENDENCIES_CFLAGS)
 AC_SUBST(SERVER_DEPENDENCIES_LIBS)
 
 if test x$server_only != xyes ; then
-   MONO_REQUIRED_VERSION=0.96
    PKG_CHECK_MODULES(WRAPPER, mono >= $MONO_REQUIRED_VERSION gthread-2.0 >= $GLIB_REQUIRED_VERSION)
    AC_SUBST(WRAPPER_CFLAGS)
    AC_SUBST(WRAPPER_LIBS)
