--- a/backends/Makefile.am
+++ b/backends/Makefile.am
@@ -1,5 +1,5 @@
 SUBDIRS = classes server ptrace mono-csharp native
 
-EXTRA_DIST = BreakpointManager.cs DaemonThreadRunner.cs Debugger.cs ILanguageBackend.cs \
+EXTRA_DIST = BreakpointManager.cs Debugger.cs ILanguageBackend.cs \
 	Inferior.cs MonoThreadManager.cs Process.cs SingleSteppingEngine.cs StepFrame.cs \
 	ThreadManager.cs
