--- a/frontend/Makefile.am
+++ b/frontend/Makefile.am
@@ -1,4 +1,4 @@
-noinst_DATA = CSharpExpressionParser.cs CSharpTokenizer_lex.cs
+noinst_DATA = CSharpExpressionParser.cs
 
 JAY = $(top_builddir)/jay/jay
 CSLEX = $(top_builddir)/cslex/cslex.exe
@@ -6,10 +6,7 @@ CSLEX = $(top_builddir)/cslex/cslex.exe
 CSharpExpressionParser.cs: CSharpExpressionParser.jay
 	$(JAY) -ctv < skeleton $< > tmp-p && mv -f tmp-p CSharpExpressionParser.cs
 
-CSharpTokenizer_lex.cs: CSharpTokenizer.lex
-	mono $(CSLEX) $<
-
-MAINTAINERCLEANFILES = CSharpExpressionParser.cs CSharpTokenizer_lex.cs y.output
+MAINTAINERCLEANFILES = CSharpExpressionParser.cs y.output
 
 EXTRA_DIST = \
 	CL.cs				\
@@ -18,8 +15,6 @@ EXTRA_DIST = \
 	Expression.cs			\
 	CSharpExpressionParser.cs	\
 	CSharpExpressionParser.jay	\
-	CSharpTokenizer_lex.cs		\
-	CSharpTokenizer.lex		\
 	GnuReadLine.cs			\
 	IExpressionParser.cs		\
 	Interpreter.cs			\
