2005-04-08  Martin Baulig  <martin@ximian.com>
	* backends/server/i386-ptrace.c: Renamed to x86-ptrace.c.
	* backends/server/i386-linux-ptrace.c: Renamed to x86-linux-ptrace.c.
	* backends/server/i386-linux-ptrace.h: Renamed to x86-linux-ptrace.h.
	* backends/server/i386-arch.h: Renamed to x86-arch.h and moved the
	architecture-specific stuff to a new i386-arch.h.

	* backends/server/x86-arch.h: Renamed `I386BreakpointInfo' to
	`X86BreakpointInfo' and all the `i386_arch_*' functions to `x86_arch_*'.


svn path=/trunk/debugger/; revision=42690

--- a/backends/server/Makefile.am
+++ b/backends/server/Makefile.am
@@ -3,19 +3,19 @@ INCLUDES = @SERVER_DEPENDENCIES_CFLAGS@ @server_cflags@
 lib_LTLIBRARIES = libmonodebuggerserver.la
 
 EXTRA_libmonodebuggerserver_la_SOURCES = \
-	i386-linux-ptrace.c		\
+	x86-linux-ptrace.c		\
 	i386-linux-ptrace.h		\
 	i386-win32.c			\
 	i386-win32.h			\
 	i386-arch.c			\
 	i386-arch.h			\
-	i386-ptrace.c			\
+	x86-ptrace.c			\
 	i386-ptrace.h
 
 if PLATFORM_POWERPC
 platform_sources = powerpc-darwin.c
 else
-platform_sources = i386-ptrace.c
+platform_sources = x86-ptrace.c
 endif
 
 libmonodebuggerserver_la_SOURCES = \
