--- a/configure.in
+++ b/configure.in
@@ -33,6 +33,13 @@ AC_SUBST(WARN_CFLAGS)
 
 AC_MSG_CHECKING([host platform characteristics])
 case "$host" in
+	x86_64-*-linux*)
+		glue_cflags=-D_GNU_SOURCE
+		server_cflags=-D_GNU_SOURCE
+		server_only=no
+		bfd_target=x86_64
+		platform=x86_64
+		;;
 	*-*-linux*)
 		glue_cflags=-D_GNU_SOURCE
 		server_cflags=-D_GNU_SOURCE
@@ -61,6 +68,8 @@ AC_ARG_WITH(bfd-target,
 )
 
 AM_CONDITIONAL(BFD_TARGET_POWERPC, test x$bfd_target = xpowerpc)
+AM_CONDITIONAL(BFD_TARGET_X86_64, test x$bfd_target=x86_64)
+AM_CONDITIONAL(PLATFORM_X86_64, test x$platform = xx86_64)
 AM_CONDITIONAL(PLATFORM_POWERPC, test x$platform = xpowerpc)
 
 AC_SUBST(glue_cflags)
