2005-05-02  Chris Toshok  <toshok@ximian.com>
	* wrapper/Makefile.am (MCS_FLAGS): use -debug instead of -g, and
	turn off warnings about private things that are never used.


svn path=/trunk/debugger/; revision=43867

--- a/wrapper/Makefile.am
+++ b/wrapper/Makefile.am
@@ -21,7 +21,7 @@ bin_SCRIPTS = mdb
 
 one_SCRIPTS = mdb.exe 
 
-MCS_FLAGS = -g -define:DEBUG
+MCS_FLAGS = -debug -define:DEBUG -nowarn:0169,0067
 
 noinst_SCRIPTS = Mono.Debugger.dll
 
