* configure.in (pkg_config_path): Rename from PKG_PATH, so as to work with newer versions of pkg-config. * frontend/Makefile.am (CSharpExpressionParser.cs): Pick 'skeleton' from $(srcdir). * wrapper/Makefile.am (LANGUAGE_SPECIFIC_FILES): Look for CSharpExpressionParser in $(top_builddir).
svn path=/trunk/debugger/; revision=45236

--- a/frontend/Makefile.am
+++ b/frontend/Makefile.am
@@ -3,8 +3,8 @@ noinst_DATA = CSharpExpressionParser.cs
 JAY = $(top_builddir)/jay/jay
 CSLEX = $(top_builddir)/cslex/cslex.exe
 
-CSharpExpressionParser.cs: CSharpExpressionParser.jay
-	$(JAY) -ctv < skeleton $< > tmp-p && mv -f tmp-p CSharpExpressionParser.cs
+CSharpExpressionParser.cs: CSharpExpressionParser.jay $(srcdir)/skeleton
+	$(JAY) -ctv < $(srcdir)/skeleton $< > tmp-p && mv -f tmp-p CSharpExpressionParser.cs
 
 MAINTAINERCLEANFILES = CSharpExpressionParser.cs y.output
 
