--- a/configure.in
+++ b/configure.in
@@ -121,15 +121,15 @@ AC_MSG_RESULT($from_cvs)
 
 AM_CONDITIONAL(COMPILING_FROM_CVS, test x$from_cvs = xyes)
 
-PKG_PATH=
+pkg_config_path=
 AC_ARG_WITH(crosspkgdir, [  --with-crosspkgdir=/path/to/pkg-config/dir],
 	if test x$with_crosspkgdir = "x"; then
 		if test -s $PKG_CONFIG_PATH; then
-			PKG_PATH=$PKG_CONFIG_PATH
+			pkg_config_path=$PKG_CONFIG_PATH
 		fi
 	else
-		PKG_PATH=$with_crosspkgdir
-		PKG_CONFIG_PATH=$PKG_PATH
+		pkg_config_path=$with_crosspkgdir
+		PKG_CONFIG_PATH=$pkg_config_path
 		export PKG_CONFIG_PATH
 	fi
 )
